# mcsim

./: .gitignore  Cargo.toml  README.md  RESET_INSTRUCTIONS.md
crates/mcsim-agents/src/: lib.rs
crates/mcsim-common/src/: lib.rs
crates/mcsim-firmware/src/: dll.rs
crates/mcsim-itm/src/: lib.rs
crates/mcsim-lora/src/: lib.rs
crates/mcsim-model/src/: lib.rs
crates/mcsim-model/src/properties/: definitions.rs  mod.rs  registry.rs
crates/mcsim-runner/: Cargo.toml
crates/mcsim-runner/src/: lib.rs  main.rs  metric_spec.rs  metrics_export.rs  rerun_logger.rs
crates/mcsim-runner/tests/: trace_test.rs
crates/meshcore-packet/: Cargo.toml
crates/meshcore-packet/src/: lib.rs
docs/: TIMING_AND_DETERMINISM.md
examples/topologies/: diamond.yaml
plans/: ARCHITECTURE.md
scripts/: setup_dependencies.sh
simulator/common/include/: Arduino.h  nvs_flash.h  sim_api.h  sim_context.h  sim_filesystem.h  sim_prefix.h  sim_radio.h  sim_serial.h
simulator/common/src/: sim_radio.cpp
