[package]
name = "meshcore-packet"
description = "MeshCore packet encoding, decoding, and encryption"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde-big-array = "0.5"
rand.workspace = true
hex = "0.4"
chacha20poly1305 = "0.9"
blake2 = "0.10"
sha2 = "0.10"

[dev-dependencies]
